# DisplayBoard_FW

./: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
include/: ComCenter.h  EventQueues.h  GUI.h  GitHash.h  Global.h  UpdateHandler.h  Version.h
include/Managers/: CanUpdateManager.h  ManagerUtils.h  OperationManager.h
include/Screens/: LvglRpmScreen.h  LvglSpeedScreen.h  LvglTemperatureScreen.h
include/UpdateHandlers/: CanUpdater.h
res/img/c/: leftIndicator.c  rightIndicator.c
src/: CMakeLists.txt  ComCenter.c  EventQueues.c  GUI.c  Global.c  UpdateHandler.c  idf_component.yml  main.c
src/Managers/: CanUpdateManager.c  ManagerUtils.c  OperationManager.c  RegistrationManager.c
src/Screens/: LvglRpmScreen.c  LvglSpeedScreen.c  LvglTemperatureScreen.c
src/UpdateHandlers/: CanUpdater.c
